syntax = "proto3";
option java_multiple_files = true;
package ru.labs.grading;


service FileService {
  rpc downloadFile (DownloadFileRequest) returns (stream DataChunk);
}

message DataChunk {
  bytes data = 1;
  int32 size = 2;
}

message DownloadFileRequest {
  string fileName = 1;
}