syntax = "proto3";

package ru.labs.grading;

import "google/protobuf/empty.proto";

message MinRatingResponse {
  repeated string taskId = 2;
}

service MinRatingService {
  rpc getAverageRatingByTaskId(google.protobuf.Empty) returns (MinRatingResponse);
}